--- a/SimulHelper/SimulHelper.csproj
+++ b/SimulHelper/SimulHelper.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="SkiaSharp" Version="2.80.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Systems\" />
+  </ItemGroup>
+
 </Project>
